# axz-defect-homology-theory

./: A_PLUS_REPO_AUDIT.md  CHANGELOG.md  CITATION.cff  CLAIM_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITIONS.md  GITHUB_ACTIONS_WORKFLOW_VERIFY_YML_VISIBLE_COPY.txt  GITHUB_PAGES_SETUP_VISIBLE.md  GITIGNORE_VISIBLE_TEMPLATE.txt  LICENSE  Makefile  ONE_ULTIMATE_RELEASE_POLICY.md  PROOF_SKETCH.md  README.md  RELEASE_NOTES.md  REPO_INFO.md  RUN_ALL.sh  SECURITY.md  SHA256SUMS.txt  THEOREM.md  VERIFICATION_REPORT.md  VISIBLE_UPLOAD_README_FIRST.md  index.html  pyproject.toml  requirements.txt
core-laws/: AXZ_26_CORE_LAWS.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  FORMAL_SPEC.md  GITHUB_REPO_SETUP_A_PLUS.md  NANO_GAP_STABILITY_LEMMA.md  PROFESSOR_AUDIT_CHECKLIST.md  REPRODUCIBILITY.md  TRUTH_BOUNDARY.md  WHY_THIS_MATTERS.md
examples/: ai_firewall_complex.json  bad_chain_d2d1.json  bad_chain_d3d2.json  erdos_straus_gate_complex.json  full_closed_chain.json  microscope_telemetry_complex.json  open_gate_receipt_obstruction.json  open_residual_obstruction.json  sat_clique_reduction_complex.json
paper/: main.tex  references.bib
receipts/: RELEASE_MANIFEST.json  ai_firewall_complex_homology.json  bad_chain_d2d1_homology.json  bad_chain_d3d2_homology.json  erdos_straus_gate_complex_homology.json  full_closed_chain_homology.json  full_closed_chain_nanogap.json  microscope_telemetry_complex_homology.json  microscope_telemetry_complex_nanogap.json  open_gate_receipt_obstruction_homology.json  open_residual_obstruction_homology.json  receipt_replay_report.json  (+1 more)
(+21 files in other folders)
